symbaroum5ecore/symbaroum5ecore/css/symbaroum-dnd5e-mod.css
/* Global styles */

@font-face {
  font-family: 'Primitive';
  /* font-style: normal;
  font-weight: 400;
  font-display: swap; */
  src: url('../fonts/Primitive-4yGY.ttf');
  /* unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; */
}
@font-face {
  font-family: 'Fondamento';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/fondamento/v11/4UaHrEJGsxNmFTPDnkaJ96rp5w.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: 'Jim Nightshade';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url(https://fonts.gstatic.com/s/jimnightshade/v10/PlIkFlu9Pb08Q8HLM1PxmB0g-NS_XXs.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* Global Variables */
:root {
  --syb5e-pc-color: white;
  --syb5e-pc-background: none;
  --syb5e-pc-background-image: url(../images/background/blue_square_light.webp);
  --syb5e-pc-font: 'Fondamento';
  --syb5e-pc-border-image: url(../images/journal/sym-journal-border.webp);

  --syb5e-npc-color: white;
  --syb5e-npc-background: none;
  --syb5e-npc-background-image: url(../images/background/dark_green_gold.webp);
  --syb5e-npc-font: 'Fondamento';
  --syb5e-npc-border-image: url(../images/journal/sym-journal-header.webp);
}

/* End of Global Variables */
/* ************************ */

/* Character Sheet Styling  */
/* ************************ */

.app.window-app.syb5e.actor.character.sheet {
  /* background: chartreuse; */
  border: 13px solid transparent;
  border-image: var(--syb5e-pc-border-image);
  border-image-slice: 50%;
  border-image-width: 100%;
}
.syb5e.sheet.actor.character .window-content {
  /* background: chartreuse; */
  background-image: var(--syb5e-pc-background-image);
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}
.syb5e.sheet.actor.character .sheet-navigation {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character input[type='text'],
.syb5e.sheet.actor.character input[type='number'],
.syb5e.sheet.actor.character select {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character input[type='text']:hover,
.syb5e.sheet.actor.character input[type='number']:hover,
.syb5e.sheet.actor.character input[type='checkbox']:hover,
.syb5e.sheet.actor.character input[type='text']:focus,
.syb5e.sheet.actor.character input[type='number']:focus,
.syb5e.sheet.actor.character input[type='checkbox']:focus {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character input[type='text'],
.syb5e.sheet.actor.character .sheet input[type='number'] {
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character .sheet-header .summary li {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character input[type='text'],
.syb5e.sheet.actor.character input[type='number'] {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character .sheet-header h1.charname input {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
  font-size: 40px;
}

.syb5e.sheet.actor.character .sheet-header .charlevel {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character .sheet-header .experience span.max {
  color: var(--syb5e-pc-color);
}
.syb5e.sheet.actor.character .form-group label {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character .sheet-header .summary input,
.syb5e.sheet.actor.character .sheet.actor .sheet-header .summary span {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
  font-size: small;
}

.syb5e.sheet.actor.character .ability-scores .ability input.ability-score {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character ul.attributes li.attribute .attribute-value.multiple input {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character h4.box-title {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
  font-size: small;
}

.syb5e.sheet.actor.character ::placeholder {
  /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: var(--syb5e-pc-color);
  opacity: 0.75; /*Firefox */
}

.syb5e.sheet.actor.character ::-ms-input-placeholder {
  /* Microsoft Edge */
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character span.sep {
  color: var(--syb5e-pc-color);
  font-size: medium;
}

.syb5e.sheet.actor.character .inventory-filters .currency label {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character ul.attributes li.attribute .attribute-footer {
  color: var(--syb5e-pc-color);
  font-family: var(--syb5e-pc-font);
}

.syb5e.sheet.actor.character .counters .counter h4 {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character .traits i.fas {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character .proficient .proficiency-toggle {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character select {
  color: black;
  background-color: #b5b3a4;
}

.syb5e.sheet.actor.character .items-list .items-header h3 {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character .items-list {
  color: var(--syb5e-pc-color);
}

.syb5e.sheet.actor.character .items-list .item-name h3,
.syb5e.sheet.actor.character .items-list .item-name h4 {
  color: var(--syb5e-pc-color);
}
.syb5e.sheet.actor.character .inventory .item-controls .item-toggle.active,
.syb5e.sheet.actor.character .spellbook .item-controls .item-toggle.active {
  color: var(--syb5e-pc-color);
}
/* ... */

